<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Suit Media</string>
    <string name="enter_name">Name</string>
    <string name="enter_palindrome">Palindrome</string>
    <string name="check_palindrome">Check</string>
    <string name="next_activity">Next</string>
    <string name="welcome">Welcome</string>
    <string name="selected_user">Selected User Name</string>
    <string name="username">Username</string>
    <string name="choose_user">Choose a User</string>
    <string name="item_name">Username</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="ok">OK</string>
    <string name="ispalindrome">isPalindrome</string>
    <string name="not_palindrome">not palindrome</string>
    <string name="name_cannot_be_empty">Name cannot be empty</string>
    <string name="palindrome_input_cannot_be_empty">Palindrome input cannot be empty</string>
</resources>